Main.3 rc 1 (#19)
* removed deprecated WebSecurityConfigurerAdapter

* fixed interfaces and project architecture (#16)

* fixed sonar comments (#18)